Fixing the stylesheets to the text is readable

--- a/app/assets/stylesheets/base/post.css.scss
+++ b/app/assets/stylesheets/base/post.css.scss
@@ -2,7 +2,7 @@
 
 #content {
   clear: both;
-  color: #eee;
+  color: #666666;
 
   article {
     padding: 0;
