--- a/app/assets/stylesheets/color_schemes/nate-yellow.css.scss
+++ b/app/assets/stylesheets/color_schemes/nate-yellow.css.scss
@@ -6,7 +6,7 @@ $text-color: #151515;
 
 $logo: #2b3634;
 
-$theme: #999;
+$theme: #666666;
 $theme-light: lighten($theme, 14%);
 
 $selection-bg: $theme;
